--- a/src/app/activematches/activematches.component.html
+++ b/src/app/activematches/activematches.component.html
@@ -2,7 +2,7 @@
     <div class="match-game-container">
         <div class="match-game-box">
             <div *ngFor="let game of Games;">
-                <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url">
+                <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url && getDate(game?.begin_at) > currentDate.getTime()">
                     <mat-card [routerLink]="['/match',game._id]" class="match-game-entry">
                         <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='league-of-legends'">
                             <div class="game-title">
