Added leaderboard button

--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -8,7 +8,8 @@
 </div>
 <div style="text-align: center;">
     <button class="homepage-button" mat-raised-button type="Submit" (click)="home()">Home</button>
-    <button class="logout-button " mat-raised-button type="Submit" (click)="logout()">Logout</button>
+    <button class="logout-button" mat-raised-button type="Submit" (click)="logout()">Logout</button>
+    <button class="leaderboard-button" mat-raised-button type="Submit" (click)="leaderboard()">Leaderboard</button>
 </div>
 
 
