--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -26,6 +26,15 @@
     background: #550798;
 }
 
+.leaderboard-button {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    margin-top: 10px;
+    color: rgba(255, 255, 255, 0.87);
+    background: #550798;
+}
+
 h3 {
     color: rgba(255, 255, 255, .87);
 }
