--- a/src/app/activematches/activematches.component.css
+++ b/src/app/activematches/activematches.component.css
@@ -85,6 +85,15 @@
     color: rgba(255, 255, 255, .60)
 }
 
+.team-name-container {
+    font-size: 24px;
+}
+
+.mat-progress-spinner {
+    display: unset !important;
+    position: unset !important;
+}
+
 .game-title-container,
 .team-names {
     color: rgba(255, 255, 255, .87);
