--- a/src/app/activematches/activematches.component.html
+++ b/src/app/activematches/activematches.component.html
@@ -1,32 +1,39 @@
 <div class="bottom-container">
     <div class="match-game-container">
         <div class="match-game-box">
-            <div *ngFor="let game of Games;">
-                <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url && getDate(game?.begin_at) > currentDate.getTime()">
-                    <mat-card [routerLink]="['/match',game._id]" class="match-game-entry">
-                        <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='league-of-legends'">
-                            <div class="game-title">
-                                <p>League of Legends</p>
-                            </div>
-                        </mat-card-title>
-                        <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='cs-go'">
-                            <div class="game-title">
-                                <p>Counter-Strike: Global Offensive</p>
-                            </div>
-                        </mat-card-title>
-                        <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='dota-2'">
-                            <div class="game-title">
-                                <p>Dota 2</p>
-                            </div>
-                        </mat-card-title>
-                        <img class="teamImage1" src="{{game?.opponents[0]?.opponent?.image_url}}">
-                        <img class="teamImage2" src="{{game?.opponents[1]?.opponent?.image_url}}">
-                        <mat-card-title class="game-date">{{game?.begin_at | date:'yyyy-MM-dd'}}</mat-card-title>
-                        <mat-card-title class="team-name-container">{{game?.opponents[0]?.opponent?.name}} vs. {{game?.opponents[1]?.opponent?.name}}</mat-card-title>
-                        <mat-card-title class="number-of-games">Number of Games: {{game?.number_of_games}}</mat-card-title>
-                    </mat-card>
-                </div>
+            <div style="text-align:center" *ngIf="Games[0]==null; else elseBlock">
+                <mat-progress-spinner mode="indeterminate" color="accent"></mat-progress-spinner>
+                <img src="https://cdn.discordapp.com/attachments/755101256825176307/824026110362124328/Desktop_-_22.png">
+                <div class="team-name-container">Loading Games...</div>
             </div>
+            <ng-template #elseBlock>
+                <div *ngFor="let game of Games;">
+                    <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url && getDate(game?.begin_at) > currentDate.getTime()">
+                        <mat-card [routerLink]="['/match',game._id]" class="match-game-entry">
+                            <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='league-of-legends'">
+                                <div class="game-title">
+                                    <p>League of Legends</p>
+                                </div>
+                            </mat-card-title>
+                            <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='cs-go'">
+                                <div class="game-title">
+                                    <p>Counter-Strike: Global Offensive</p>
+                                </div>
+                            </mat-card-title>
+                            <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='dota-2'">
+                                <div class="game-title">
+                                    <p>Dota 2</p>
+                                </div>
+                            </mat-card-title>
+                            <img class="teamImage1" src="{{game?.opponents[0]?.opponent?.image_url}}">
+                            <img class="teamImage2" src="{{game?.opponents[1]?.opponent?.image_url}}">
+                            <mat-card-title class="game-date">{{game?.begin_at | date:'yyyy-MM-dd'}}</mat-card-title>
+                            <mat-card-title class="team-name-container">{{game?.opponents[0]?.opponent?.name}} vs. {{game?.opponents[1]?.opponent?.name}}</mat-card-title>
+                            <mat-card-title class="number-of-games">Number of Games: {{game?.number_of_games}}</mat-card-title>
+                        </mat-card>
+                    </div>
+                </div>
+            </ng-template>
         </div>
     </div>
 </div>
