--- a/src/app/activematches/activematches.component.html
+++ b/src/app/activematches/activematches.component.html
@@ -1,3 +1,9 @@
+<div class="searchBox">
+    <mat-form-field color="primary" class="full-width">
+        <mat-label style="color:rgba(255, 255, 255, .37); margin-left:10px">Search for Teams, Games, Dates...</mat-label>
+        <input matInput style="color:white" autocomplete="off" type="text" name="search" [(ngModel)]="searchText">
+    </mat-form-field>
+</div>
 <div class="bottom-container">
     <div class="match-game-container">
         <div class="match-game-box">
@@ -7,7 +13,7 @@
                 <div class="team-name-container">Loading Games...</div>
             </div>
             <ng-template #elseBlock>
-                <div *ngFor="let game of Games;">
+                <div *ngFor="let game of Games | filter:searchText">
                     <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url && getDate(game?.begin_at) > currentDate.getTime()">
                         <mat-card [routerLink]="['/match',game._id]" class="match-game-entry">
                             <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='league-of-legends'">
