--- a/src/app/matchpage/matchpage.component.css
+++ b/src/app/matchpage/matchpage.component.css
@@ -124,7 +124,7 @@ h1 {
 
 .bottom-container {
     position: relative;
-    height: 55%;
+    height: 585px;
     overflow-y: auto;
 }
 
@@ -148,7 +148,7 @@ h1 {
 }
 
 .match-game-entry {
-    height: 27rem;
+    height: 30rem;
     margin-bottom: 10px;
     margin-right: 10px;
     background-color: #25262c;
