--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -4,6 +4,7 @@
 <app-background-video></app-background-video>
 <div fxLayoutAlign="center center" fxFlexFill class="main-login-page-div" (ngSubmitt)="onSubmit()">
     <mat-card fxFlex="30">
+        <img style="float:right; width:110px" src="https://cdn.discordapp.com/attachments/755101256825176307/824026110362124328/Desktop_-_22.png">
         <section>
             <h1 class="md-display-3">ALL IN</h1>
         </section>
