--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -2,7 +2,7 @@
     <source src="../../assets/video-temporary/lallin.mp4" type="video/mp4">
 </video> -->
 <app-background-video></app-background-video>
-<div fxLayoutAlign="center center" fxFlexFill class="main-login-page-div" (ngSubmitt)="onSubmit()">
+<div fxLayoutAlign="center center" fxFlexFill class="main-login-page-div" (ngSubmitt)="onSubmit(loginForm)">
     <mat-card fxFlex="30">
         <section> <h1 class="md-display-3">ALL IN</h1> </section> 
         <section> <h2 class="md-display-1">E-Sports</h2> </section>
@@ -11,15 +11,15 @@
                 {{errorMSG}}
             </div>
         </div>
-        <form fxLayoutAlign="stretch" fxLayout="column" class="login-form" (ngSubmit)="onSubmit()">
+        <form #loginForm="ngForm" fxLayoutAlign="stretch" fxLayout="column" class="login-form" (ngSubmit)="onSubmit(loginForm)">
             <mat-form-field >
-            <input id="username-input" matInput placeholder="Username" [(ngModel)]="userName" required [ngModelOptions]="{standalone: true}">
+            <input id="username-input" matInput placeholder="Username" [(ngModel)]="payload.UserName" required [ngModelOptions]="{standalone: true}">
             </mat-form-field>
           
             <mat-form-field >
-                <input id="password-input" matInput type="passwrod" placeholder="Password" [(ngModel)]="password" required [ngModelOptions]="{standalone: true}">
+                <input id="password-input" matInput type="passwrod" placeholder="Password" [(ngModel)]="payload.Password" required [ngModelOptions]="{standalone: true}">
               </mat-form-field>
-              <button id="login-button" mat-raised-button type="Submit" (click)="onSubmit()">Login</button>
+              <button id="login-button" mat-raised-button type="Submit" (click)="onSubmit(loginForm)">Login</button>
           </form>
           <button (click)="redirectToSignUp()">Sign Up</button>
     </mat-card>
