--- a/src/app/activematches/activematches.component.html
+++ b/src/app/activematches/activematches.component.html
@@ -14,7 +14,7 @@
             </div>
             <ng-template #elseBlock>
                 <div *ngFor="let game of Games | filter:searchText">
-                    <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url && getDate(game?.begin_at) > currentDate.getTime()">
+                    <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url">
                         <mat-card [routerLink]="['/match',game._id]" class="match-game-entry">
                             <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='league-of-legends'">
                                 <div class="game-title">
