--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -24,6 +24,13 @@
     font-weight: 40;
 }
 
+.Error {
+    color: rgba(185, 16, 16, 0.712);
+    p {
+        padding-left: 20px;
+    }
+}
+
 #login-button {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-style: normal;
