--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -1,10 +1,41 @@
+.bottom-container {
+    opacity: 99%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 525px;
+    background: rgba(18, 18, 18, 0.9);
+    margin-left: 10px;
+    margin-right: 10px;
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.searchBox {
+    opacity: 99%;
+    margin-left: 10px;
+    display: flex;
+    background: rgba(18, 18, 18, 0.9);
+    margin-left: 10px;
+    margin-right: 10px;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.full-width {
+    width: 100%;
+    margin-right: 10px;
+    margin-left: 10px;
+}
+
 .sidenav-container {
     height: 100%;
 }
 
 .sidenav-container,
-.toolbar,
-.bottom-container {
+.toolbar {
     background-color: #121212;
 }
 
@@ -96,20 +127,6 @@ h1 {
     text-align: center;
     background-color: #ddd;
     margin-right: 2px;
-}
-
-.bottom-container {
-    opacity: 99%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 55%;
-    background: rgba(18, 18, 18, 0.9);
-    margin-left: 10px;
-    margin-right: 10px;
-    border-radius: 10px;
 }
 
 .match-game-container {
