--- a/src/app/matchpage/matchpage.component.html
+++ b/src/app/matchpage/matchpage.component.html
@@ -19,24 +19,36 @@
                     </mat-card-title>
                     <mat-card-title class="game-date">{{Game?.begin_at | date:'yyyy-MM-dd'}}</mat-card-title>
                     <mat-card-title class="number-of-games">Number of Games: {{Game?.number_of_games}}</mat-card-title>
-                    <mat-card-content class="main-content">Place your bet!</mat-card-content>
-                    <form class="bettingForm" (ngSubmit)="onSubmit()" #bettingForm="ngForm">
-                        <mat-card-content class="teamChoiceGroup">
-                            <mat-button-toggle-group required [(ngModel)]="teamChoice" name="teamChoice">
-                                <mat-button-toggle class="choiceButton" value="{{Game?.opponents[0]?.opponent?.name}}"><img class="teamImage" src="{{Game?.opponents[0]?.opponent?.image_url}}"></mat-button-toggle>
-                                <mat-button-toggle class="choiceButton" value="{{Game?.opponents[1]?.opponent?.name}}"><img class="teamImage" src="{{Game?.opponents[1]?.opponent?.image_url}}"></mat-button-toggle>
-                            </mat-button-toggle-group>
+                    <div *ngIf="alreadyBet==true; else elseBlock">
+                        <mat-card-content class="main-content">Bet already placed!</mat-card-content>
+                        <mat-card-content style="margin-top:20px">Placed on: {{currentBet.Date | date:'yyyy-MM-dd'}}</mat-card-content>
+                        <mat-card-content *ngIf="currentBet.TeamId == this.Game.opponents[0]?.opponent?.id">
+                            <img class="teamImage" src="{{Game?.opponents[0]?.opponent?.image_url}}"><br>You have selected team: {{Game?.opponents[0]?.opponent?.name}}
                         </mat-card-content>
-                        <mat-card-content style="color: rgba(255, 255, 255, .37);" *ngIf="teamChoice==null">Please select a team</mat-card-content>
-                        <mat-card-content style="color: rgba(255, 255, 255, .37);" *ngIf="teamChoice!=null">You have chosen Team: {{teamChoice}}</mat-card-content>
-                        <mat-form-field color="primary" appearance="legacy" class="example-full-width">
-                            <mat-label style="color:rgba(255, 255, 255, .37)">Enter Amount</mat-label>
-                            <input matInput type="text" name="bettingAmount" id="bettingAmount" [(ngModel)]="bettingAmount" required>
-                        </mat-form-field>
-                        <br>
-                        <button mat-button class="submitButton" [disabled]="!bettingForm.valid" type="submit">Submit</button>
-                    </form>
-
+                        <mat-card-content *ngIf="currentBet.TeamId == this.Game.opponents[1]?.opponent?.id">
+                            <img class="teamImage" src="{{Game?.opponents[1]?.opponent?.image_url}}"><br>You have selected team: {{Game?.opponents[1]?.opponent?.name}}
+                        </mat-card-content>
+                        <mat-card-content>Bet amount: {{currentBet.Amount}}</mat-card-content>
+                    </div>
+                    <ng-template #elseBlock>
+                        <mat-card-content class="main-content">Place your bet!</mat-card-content>
+                        <form class="bettingForm" (ngSubmit)="onSubmit()" #bettingForm="ngForm">
+                            <mat-card-content class="teamChoiceGroup">
+                                <mat-button-toggle-group required [(ngModel)]="teamChoice" name="teamChoice">
+                                    <mat-button-toggle class="choiceButton" value="{{Game?.opponents[0]?.opponent?.name}}"><img class="teamImage" src="{{Game?.opponents[0]?.opponent?.image_url}}"></mat-button-toggle>
+                                    <mat-button-toggle class="choiceButton" value="{{Game?.opponents[1]?.opponent?.name}}"><img class="teamImage" src="{{Game?.opponents[1]?.opponent?.image_url}}"></mat-button-toggle>
+                                </mat-button-toggle-group>
+                            </mat-card-content>
+                            <mat-card-content style="color: rgba(255, 255, 255, .37);" *ngIf="teamChoice==null">Please select a team</mat-card-content>
+                            <mat-card-content style="color: rgba(255, 255, 255, .37);" *ngIf="teamChoice!=null">You have selected team: {{teamChoice}}</mat-card-content>
+                            <mat-form-field color="primary" appearance="legacy" class="example-full-width">
+                                <mat-label style="color:rgba(255, 255, 255, .37)">Enter Amount</mat-label>
+                                <input matInput type="text" name="bettingAmount" id="bettingAmount" [(ngModel)]="bettingAmount" required>
+                            </mat-form-field>
+                            <br>
+                            <button mat-button class="submitButton" [disabled]="!bettingForm.valid" type="submit">Submit</button>
+                        </form>
+                    </ng-template>
                 </mat-card>
             </div>
 
