--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,39 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
+html,
+body {
+    height: 100%;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+html,
+body {
+    height: 100%;
+}
+
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+.mat-drawer-inner-container {
+    overflow-y: scroll !important;
+    overflow-x: hidden;
+    margin-right: 10px;
+}
+
+.mat-drawer-inner-container::-webkit-scrollbar {
+    background: transparent;
+    overflow: visible;
+    margin-left: 10px;
+}
+
+.mat-drawer-inner-container::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.3);
+    border-radius: 15px;
+}
