--- a/src/app/activematches/activematches.component.css
+++ b/src/app/activematches/activematches.component.css
@@ -5,29 +5,13 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    height: 525px;
-    background: rgba(18, 18, 18, 0.9);
+    height: 55%;
+    /* background: rgba(0, 0, 0, 0.8); */
+    /* border: 1px solid rgba(0, 0, 0, .2); */
+    backdrop-filter:(0px);
     margin-left: 10px;
     margin-right: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.searchBox {
-    opacity: 99%;
-    margin-left: 10px;
-    display: flex;
-    background: rgba(18, 18, 18, 0.9);
-    margin-left: 10px;
-    margin-right: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.full-width {
-    width: 100%;
-    margin-right: 10px;
-    margin-left: 10px;
+    border-radius: 10px;
 }
 
 .match-game-container {
@@ -69,6 +53,13 @@
     margin-bottom: 10px;
     margin-right: 10px;
     background-color: #25262c;
+    background: rgba(0, 0, 0, .2);
+    /* Play around for some fun - this is the 'glass color and transparecny */
+    background: linear-gradient(to right bottom, rgba(255,255,255,.1), rgba(255,255,255,0.1));
+    border: 1px solid rgba(255, 255, 255, .02);
+    box-shadow: inset 0 16 0 10px #121212, 0px 0px 0px 10px; 
+    /* backdrop-filter:(50px); */
+    /* border: 1px solid rgba(0, 0, 0, .2); */
     color: white;
     text-align: center;
     cursor: pointer;
@@ -103,15 +94,6 @@
     color: rgba(255, 255, 255, .60)
 }
 
-.team-name-container {
-    font-size: 24px;
-}
-
-.mat-progress-spinner {
-    display: unset !important;
-    position: unset !important;
-}
-
 .game-title-container,
 .team-names {
     color: rgba(255, 255, 255, .87);
@@ -128,4 +110,23 @@
     margin: auto;
     font-size: 12pt;
     color: rgba(255, 255, 255, .37);
+}
+
+.searchBox{
+    margin-left: 5%;
+}
+
+/* Can play with that anytime */
+.all-in-logo{
+    animation: fadeinout 1.25s linear 1 forwards;
+    animation-iteration-count: infinite;
+    margin: auto;
+}
+@keyframes fadeinout{
+    0%{opacity: 0.15;}
+    /* 25%{opacity: .5;} */
+    50%{opacity: 1;}
+    75%{opacity: 1;}
+    /* 75%{opacity: .5;} */
+    100%{opacity: 0;}
 }
