--- a/src/app/exploregames/exploregames.component.css
+++ b/src/app/exploregames/exploregames.component.css
@@ -1,5 +1,6 @@
 .popular-game-wrapper {
     max-height: 300px;
+    margin-left: 5%;
     /* border: 1px solid #ddd; */
     display: flex;
     overflow-x: auto;
@@ -8,10 +9,10 @@
 }
 
 .bottom-container {
-    opacity: 99%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: rgba(18, 18, 18, 0.9);
-    margin-left: 10px;
+    /* background: rgba(18, 18, 18, 0.9); */
+    /* Might want to play around with this later */
+    margin-left: 2%;
     margin-right: 10px;
     border-radius: 10px;
     max-width: 750px;
@@ -21,7 +22,7 @@
 
 .explore-popular {
     opacity: 99.9%;
-    margin-left: 20px;
+    margin-left: 5%;
     filter: drop-shadow(0 5px 3px black);
     color: rgba(255, 255, 255, 1);
     font-size: 30px;
