--- a/src/app/gamespage/gamespage.component.css
+++ b/src/app/gamespage/gamespage.component.css
@@ -14,18 +14,18 @@
     filter: drop-shadow(0 5px 3px black);
     color: rgba(255, 255, 255, 1);
     font-size: 30px;
-    padding-left: 20px;
+    margin-left: 6%;
     font-weight: 400;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-#my-video {
+#my-video{
     position: fixed;
     right: 0;
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-    filter: blur(20px)
+    filter: blur(90px);
 }
 
 h3 {
@@ -41,7 +41,7 @@ h1 {
     background: rgba(18, 18, 18, 0.9);
     padding: 10px 10px 10px 10px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
@@ -123,7 +123,7 @@ h1 {
 
 .bottom-container {
     position: relative;
-    height: 255px;
+    height: 55%;
     overflow-y: auto;
 }
 
@@ -178,4 +178,13 @@ h1 {
  ::-webkit-scrollbar {
     width: 0;
     height: 0;
+}
+
+*:-webkit-scrollbar{
+    width: 0;
+    height: 0;
+}
+
+.searchBox{
+    margin-left: 5%;
 }
