--- a/src/app/homepage/homepage.component.css
+++ b/src/app/homepage/homepage.component.css
@@ -14,7 +14,7 @@
     filter: drop-shadow(0 5px 3px black);
     color: rgba(255, 255, 255, 1);
     font-size: 30px;
-    padding-left: 20px;
+    margin-left: 6%;
     font-weight: 400;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -25,7 +25,8 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-    filter: blur(20px)
+    /* filter: blur(60px); */
+    filter: blur(90px);
 }
 
 h3 {
@@ -41,24 +42,9 @@ h1 {
     background: rgba(18, 18, 18, 0.9);
     padding: 10px 10px 10px 10px;
     margin-top: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
-}
-
-.mat-drawer-inner-container {
-    overflow-y: scroll !important;
-    height: 0px !important;
-}
-
-::-webkit-scrollbar {
-    background: transparent !important;
-    overflow: visible !important;
-}
-
-::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.3);
-    border-radius: 15px;
 }
 
 .sidenav .mat-toolbar {
