--- a/src/app/leaderboard/leaderboard.component.css
+++ b/src/app/leaderboard/leaderboard.component.css
@@ -1,50 +1,17 @@
-.bottom-container {
-    opacity: 99%;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    height: 525px;
-    background: rgba(18, 18, 18, 0.9);
-    margin-left: 10px;
-    margin-right: 10px;
-    border-bottom-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-
-.searchBox {
-    opacity: 99%;
-    margin-left: 10px;
-    display: flex;
-    background: rgba(18, 18, 18, 0.9);
-    margin-left: 10px;
-    margin-right: 10px;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
-}
-
-.full-width {
-    width: 100%;
-    margin-right: 10px;
-    margin-left: 10px;
-}
-
 .sidenav-container {
     height: 100%;
 }
 
 .sidenav-container,
-.toolbar {
+.toolbar{
     background-color: #121212;
 }
-
 .match-game-header {
     opacity: 99.9%;
     filter: drop-shadow(0 5px 3px black);
     color: rgba(255, 255, 255, 1);
     font-size: 30px;
-    padding-left: 20px;
+    padding-left: 5%;
     font-weight: 400;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -55,7 +22,7 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-    filter: blur(20px)
+    filter: blur(90px)
 }
 
 h3 {
@@ -129,6 +96,19 @@ h1 {
     margin-right: 2px;
 }
 
+.bottom-container {
+    opacity: 99%;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    height: 55%;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 10px;
+}
+
 .match-game-container {
     width: 90%;
     display: grid;
@@ -163,16 +143,22 @@ h1 {
     width: 0;
 }
 
+
 .first {
     background-color: #bf9223 !important;
+    background: linear-gradient(to right bottom, rgba(253, 181, 0, 0.9), rgba(211, 156, 18, 0.5))!important; 
+    border: 1px solid rgba(191, 146, 35,
+    1);
 }
-
 .second {
     background-color: #848482 !important;
+    background: linear-gradient(to right bottom, rgba(255, 255, 255, 0.7), rgba(190, 190, 187, 0.6))!important; 
+    border: 1px solid rgba(132, 132, 130,.1);
 }
-
 .third {
     background-color: #B77333 !important;
+    background: linear-gradient(to right bottom, rgba(255, 123, 0, 0.3), rgba(146, 77, 12, 0.3))!important; 
+    border: 1px solid rgba(183, 115, 51,.1)
 }
 
 .match-game-entry {
@@ -180,7 +166,8 @@ h1 {
     margin-bottom: 10px;
     margin-right: 10px;
     background-color: #25262c;
-    color: white;
+    background: linear-gradient(to right bottom, rgba(255,255,255,.1), rgba(255,255,255,0.1));
+    border: 1px solid rgba(255, 255, 255, .02);
     text-align: center;
     cursor: pointer;
     -webkit-touch-callout: none;
@@ -231,4 +218,7 @@ h1 {
     font-size: 25pt;
     color: rgba(255, 255, 255, .37);
     padding-bottom: 15px;
+}
+.searchBox{
+    margin-left: 5%;
 }
