--- a/src/app/matchpage/matchpage.component.css
+++ b/src/app/matchpage/matchpage.component.css
@@ -26,7 +26,7 @@
     bottom: 0;
     min-width: 100%;
     min-height: 100%;
-    filter: blur(20px)
+    filter: blur(90px)
 }
 
 h3 {
@@ -147,11 +147,16 @@ h1 {
     width: 0;
 }
 
+.match-game-header{
+    margin-left: 5%;
+}
+
 .match-game-entry {
     height: 30rem;
     margin-bottom: 10px;
     margin-right: 10px;
-    background-color: #25262c;
+    background-color:rgba(255, 255, 255, .09);
+    border: 1px solid rgba(255, 255, 255, .03);
     color: white;
     text-align: center;
 }
@@ -159,7 +164,8 @@ h1 {
 .game-title {
     margin: auto;
     font-size: 20pt;
-    color: rgba(255, 255, 255, .37);
+    color: rgba(255, 255, 255, .87);
+    /* color: rgba(85, 7, 152, 1); */
 }
 
 .teamImage {
@@ -176,7 +182,8 @@ h1 {
 }
 
 .choiceButton {
-    background-color: #1e1f24;
+    background-color:rgba(255, 255, 255, .18);
+    border-radius: 10px;
 }
 
 .mat-form-field-underline {
@@ -196,7 +203,15 @@ h1 {
     margin-right: 10px;
 }
 
-.submitButton {
+.submitButton{
+    width: 250px;
+    height: 40px
+}
+.submitButton:enabled {
+    background-color: rgba(85, 7, 152, 1);
+    color: rgba(255, 255, 255, .87);
+}
+.submitButton:disabled{
     background-color: #121212;
 }
 
@@ -232,7 +247,7 @@ h1 {
 .bottom-container {
     opacity: 99%;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: rgba(18, 18, 18, 0.9);
+    background: rgba(18, 18, 18, 0);
     margin-left: 10px;
     margin-right: 10px;
     border-radius: 10px;
@@ -272,4 +287,16 @@ h1 {
     color: rgba(255, 255, 255, .87);
     font-size: 20px;
     margin: auto;
+}
+
+.place-your-bet{
+    padding-top: 1rem;
+    margin: auto;
+    font-size: 20pt;
+    color: rgba(235, 213, 16,.87);
+}
+
+.team{
+    color: black;
+    size: 100px;
 }
