--- a/src/app/matchpage/matchpage.component.html
+++ b/src/app/matchpage/matchpage.component.html
@@ -4,7 +4,7 @@
     </mat-sidenav>
     <mat-sidenav-content style="opacity:90%; margin-top:10px">
         <video id="my-video" muted loop autoplay oncanplay="this.muted=true" oncanplay="this.play()" onloadedmetadata="this.muted=true">
-            <source src="../../assets/video-temporary/lallin.mp4" type="video/mp4">
+            <source src="../../assets/video-temporary/slow-allin-bg.mp4" type="video/mp4">
             Your browser does not support HTML5 video.
         </video>
         <app-exploregames></app-exploregames>
@@ -31,7 +31,7 @@
                         <mat-card-content>Bet amount: {{currentBet.Amount}}</mat-card-content>
                     </div>
                     <ng-template #elseBlock>
-                        <mat-card-content class="main-content">Place your bet!</mat-card-content>
+                        <mat-card-content class="place-your-bet">Place your bet!</mat-card-content>
                         <form class="bettingForm" (ngSubmit)="onSubmit()" #bettingForm="ngForm">
                             <mat-card-content class="teamChoiceGroup">
                                 <mat-button-toggle-group required [(ngModel)]="teamChoice" name="teamChoice">
