--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -48,22 +48,6 @@ h1 {
     background-color: #1e1e1e;
 }
 
-.mat-drawer-inner-container {
-    overflow-y: scroll !important;
-    height: 0px !important;
-    overflow-x: hidden;
-}
-
-.mat-drawer-inner-container::-webkit-scrollbar {
-    background: transparent;
-    overflow: visible;
-}
-
-.mat-drawer-inner-container::-webkit-scrollbar-thumb {
-    background-color: rgba(0, 0, 0, 0.3);
-    border-radius: 15px;
-}
-
 .leaderboard {
     text-align: center;
     cursor: pointer;
@@ -202,6 +186,8 @@ h1 {
     margin-top: 10px;
     margin-bottom: 5px;
     background-color: #25262c;
+    background-color: rgba(255, 255, 255, .09);
+    backdrop-filter: blur(100px);
     color: rgba(255, 255, 255, .60);
 }
 
@@ -219,10 +205,30 @@ h1 {
     width: 100%;
     display: flex;
     justify-content: center;
-    margin-top: 30px;
+    margin-top: 30px;;
 }
 
  ::-webkit-scrollbar {
     width: 0;
     height: 0;
+}
+
+#balance{
+    height: 100px;
+    /* For attention */
+    color: rgba(235, 213, 16,.87);
+    /* less poppy */
+    color: rgba(255, 255, 255, .87);
+    font-size: 50pt;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.balance-text{
+    margin: auto;
+    margin-left: 45px;
+}
+
+.earnings-text{
+    color: rgba(255, 255, 255, .37);
+    font-size: 14pt;
+    padding-bottom: 25px;
 }
