--- a/src/app/gamespage/gamespage.component.css
+++ b/src/app/gamespage/gamespage.component.css
@@ -38,7 +38,10 @@ h1 {
 
 .sidenav {
     width: 300px;
-    background: rgba(18, 18, 18, 0.9);
+    background: rgba(35, 35, 37, 0.5);
+    background: rgba(60, 60, 60, 0.2);
+    border: 1px solid rgba(18, 18, 18, 0.45);
+    border: 1px solid rgba(60, 60, 60, 0.25);
     padding: 10px 10px 10px 10px;
     margin-top: 10px;
     margin-bottom: 5px;
