--- a/src/app/matchpage/matchpage.component.html
+++ b/src/app/matchpage/matchpage.component.html
@@ -42,7 +42,7 @@
                             <mat-card-content style="color: rgba(255, 255, 255, .37);" *ngIf="teamChoice==null">Please select a team</mat-card-content>
                             <mat-card-content style="color: rgba(255, 255, 255, .37);" *ngIf="teamChoice!=null">You have selected team: {{teamChoice}}</mat-card-content>
                             <mat-form-field color="primary" appearance="legacy" class="example-full-width">
-                                <mat-label style="color:rgba(255, 255, 255, .37)">Enter Amount</mat-label>
+                                <mat-label class="bet-amount-input" style="color:rgba(255, 255, 255, .37)">Enter Amount</mat-label>
                                 <input matInput type="text" name="bettingAmount" id="bettingAmount" [(ngModel)]="bettingAmount" required>
                             </mat-form-field>
                             <br>
