--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -6,7 +6,7 @@
 .toolbar,
 .bottom-container,
 .match-game-container {
-    background-color: #121212;
+    background-color: rgba(255, 255, 255, 0);
 }
 
 .logout-button {
@@ -14,7 +14,7 @@
     font-style: normal;
     font-weight: normal;
     color: rgba(255, 255, 255, 0.87);
-    background: #550798;
+    background-color: #550798;
     margin-left: 25px;
 }
 
@@ -23,7 +23,7 @@
     font-style: normal;
     font-weight: normal;
     color: rgba(255, 255, 255, 0.87);
-    background: #550798;
+    background-color: #550798;
 }
 
 .leaderboard-button {
@@ -32,7 +32,7 @@
     font-weight: normal;
     margin-top: 10px;
     color: rgba(255, 255, 255, 0.87);
-    background: #550798;
+    background-color: #550798;
 }
 
 h3 {
@@ -231,4 +231,16 @@ h1 {
     color: rgba(255, 255, 255, .37);
     font-size: 14pt;
     padding-bottom: 25px;
+}
+
+.active-bet{
+    font-size: 20pt;
+}
+#bet{
+    height: 50px;
+    color: rgba(255, 255, 255, .87);;
+    font-size: 70%;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: rgba(205, 145, 6, .7);
+    text-align: center;
 }
