Fixed balance display & code cleanup

--- a/src/app/transactionhistory/transactionhistory.component.html
+++ b/src/app/transactionhistory/transactionhistory.component.html
@@ -44,7 +44,7 @@
                                     <p>Faucet</p>
                                 </div>
                             </mat-card-title>
-                            <mat-card-title class="team-name-container">Amount Taken: {{bet.Amount}}</mat-card-title>
+                            <mat-card-title class="team-name-container">Amount Given: {{bet.Amount}}</mat-card-title>
                             <mat-card-title class="team-name-container">Date: {{bet.Date | date:'yyyy-MM-dd'}}</mat-card-title>
                         </mat-card>
                     </div>
