--- a/src/app/activematches/activematches.component.html
+++ b/src/app/activematches/activematches.component.html
@@ -5,7 +5,7 @@
     </mat-form-field>
 </div>
 <div class="bottom-container">
-    <div class="match-game-container">
+    <div class="match-game-container" id="match-game-box" (scroll)="onScroll($event)">
         <div class="match-game-box">
             <div style="text-align:center" *ngIf="!Games[0]; else elseBlock">
                 <!-- <mat-progress-spinner mode="indeterminate" color="accent"></mat-progress-spinner> -->
@@ -17,18 +17,27 @@
                     <div *ngIf="game.opponents[0]?.opponent?.image_url && game?.opponents[1]?.opponent?.image_url">
                         <mat-card [routerLink]="['/match',game._id]" class="match-game-entry">
                             <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='league-of-legends'">
-                                <div class="game-title">
+                                <div *ngIf="!((game?.begin_at|date:'yyyy-MM-dd')==(currentDate|date:'yyyy-MM-dd'))" class="game-title">
                                     <p>League of Legends</p>
+                                </div>
+                                <div *ngIf="((game?.begin_at|date:'yyyy-MM-dd')==(currentDate|date:'yyyy-MM-dd'))" class="game-title">
+                                    <p>League of Legends - Live Today!</p>
                                 </div>
                             </mat-card-title>
                             <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='cs-go'">
-                                <div class="game-title">
+                                <div *ngIf="!((game?.begin_at|date:'yyyy-MM-dd')==(currentDate|date:'yyyy-MM-dd'))" class="game-title">
                                     <p>Counter-Strike: Global Offensive</p>
+                                </div>
+                                <div *ngIf="((game?.begin_at|date:'yyyy-MM-dd')==(currentDate|date:'yyyy-MM-dd'))" class="game-title">
+                                    <p>Counter-Strike: Global Offensive - Live Today!</p>
                                 </div>
                             </mat-card-title>
                             <mat-card-title class="game-title-container" *ngIf="game?.videogame[0].slug=='dota-2'">
-                                <div class="game-title">
+                                <div *ngIf="!((game?.begin_at|date:'yyyy-MM-dd')==(currentDate|date:'yyyy-MM-dd'))" class="game-title">
                                     <p>Dota 2</p>
+                                </div>
+                                <div *ngIf="((game?.begin_at|date:'yyyy-MM-dd')==(currentDate|date:'yyyy-MM-dd'))" class="game-title">
+                                    <p>Dota 2 - Live Today!</p>
                                 </div>
                             </mat-card-title>
                             <img class="teamImage1" src="{{game?.opponents[0]?.opponent?.image_url}}">
