--- a/src/app/matchpage/matchpage.component.css
+++ b/src/app/matchpage/matchpage.component.css
@@ -150,7 +150,7 @@ h1 {
     width: 0;
 }
 
-.match-game-header{
+.match-game-header {
     margin-left: 5%;
 }
 
@@ -158,7 +158,7 @@ h1 {
     height: 30rem;
     margin-bottom: 10px;
     margin-right: 10px;
-    background-color:rgba(255, 255, 255, .09);
+    background-color: rgba(255, 255, 255, .09);
     border: 1px solid rgba(255, 255, 255, .03);
     color: white;
     text-align: center;
@@ -185,7 +185,7 @@ h1 {
 }
 
 .choiceButton {
-    background-color:rgba(255, 255, 255, .18);
+    background-color: rgba(255, 255, 255, .18);
     border-radius: 10px;
 }
 
@@ -206,15 +206,17 @@ h1 {
     margin-right: 10px;
 }
 
-.submitButton{
+.submitButton {
     width: 250px;
     height: 40px
 }
+
 .submitButton:enabled {
     background-color: rgba(85, 7, 152, 1);
     color: rgba(255, 255, 255, .87);
 }
-.submitButton:disabled{
+
+.submitButton:disabled {
     background-color: #121212;
 }
 
@@ -282,7 +284,7 @@ h1 {
 }
 
 .game-date {
-    padding-top: 35px;
+    padding-top: 20px;
 }
 
 .game-title-container,
@@ -292,18 +294,32 @@ h1 {
     margin: auto;
 }
 
-.place-your-bet{
-    padding-top: 1rem;
+.place-your-bet {
+    padding-top: .5rem;
     margin: auto;
     font-size: 20pt;
-    color: rgba(235, 213, 16,.87);
+    color: rgba(235, 213, 16, .87);
+    padding-bottom: .75rem;
 }
 
-.team{
+.team {
     color: black;
     size: 100px;
 }
 
-.bet-amount-input{
+.bet-amount-input {
     font-size: 14pt;
+}
+
+.totalBet {
+    height: 20px;
+}
+
+.viewGame {
+    color: rgba(235, 213, 16, .87);
+    text-decoration: none;
+}
+
+.viewGame:hover {
+    color: rgba(235, 170, 16, .87)
 }
