--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -39,6 +39,7 @@
     line-height: 27px;
     color: rgba(255, 255, 255, 0.87);
     background: #550798;
+    // background: #692b65;
     height: 50px;
 }
 
