--- a/src/app/user-profile/user-profile.component.html
+++ b/src/app/user-profile/user-profile.component.html
@@ -26,6 +26,7 @@
             <div class="balance-text">{{Balance}}</div>
         </mat-card>
         <mat-card mat-list-item class="user-stats " *ngIf="!(token) ">Theres no balance</mat-card>
+        <mat-card mat-list-item class="user-stats leaderboard notification" (click)="notifications()" *ngIf="unreadNotifications>0" >Notification <span class="badge" *ngIf="unreadNotifications>0">{{unreadNotifications}}</span></mat-card>
         <mat-card mat-list-item class="user-stats leaderboard" (click)="leaderboard()">Leaderboard</mat-card>
         <mat-card mat-list-item class="user-stats leaderboard" [routerLink]="['/history']">History</mat-card>
         <mat-card mat-list-item class="user-stats leaderboard" id="logout" (click)="logout()">Logout</mat-card>
